Fix deprecated Runtime exec method
Replace String argument with String array